# godot-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  godot_mcp_server.py  mcp_config.claude.json  mcp_config.json  pyproject.toml  requirements.txt  server.json  windsurf.json  windsurf_mcp_config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish-mcp.yml
tests/: test_smoke.py
