[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mcp-server"
version = "1.0.0"
description = "FastMCP server for Godot 4.x — AI-assisted projects, files, assets, and GDScript"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Godot MCP Server contributors" }]
keywords = ["godot", "mcp", "model-context-protocol", "fastmcp", "gdscript", "gamedev"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "fastmcp>=3.0.0,<4",
  "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "pytest>=9.0.3",
]

[project.scripts]
godot-mcp-server = "godot_mcp_server:main"

[project.urls]
Documentation = "https://github.com/sterion66/godot-mcp-server#readme"
Repository = "https://github.com/sterion66/godot-mcp-server"
Issues = "https://github.com/sterion66/godot-mcp-server/issues"

[tool.setuptools]
py-modules = ["godot_mcp_server"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["godot_mcp_server.py", "tests"]

[tool.ruff.lint]
# Focus on correctness (pyflakes + critical pycodestyle); avoid mass style churn on the large server file.
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
